// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> flat story renders snapshot 1`] = `
<button
  class="button button--variant-flat button--color-success button--size-medium"
  type="button"
>
  ​
  Flat Button
</button>
`;

exports[`<Button /> link story renders snapshot 1`] = `
<button
  class="button button--variant-link button--color-alert"
  type="button"
>
  ​
  Link Button
</button>
`;

exports[`<Button /> linkInBody story renders snapshot 1`] = `
<p
  class="typography--size-body typography--color-base"
>
  This text surrounds the 
  <button
    class="button button--variant-link button--color-brand"
    type="button"
  >
    ​
    Link Button
  </button>
   and shows that the link should adhere to its appearance
</p>
`;

exports[`<Button /> linkInHeading story renders snapshot 1`] = `
<p
  class="typography--size-h1 typography--color-base"
>
  This text surrounds the 
  <button
    class="button button--variant-link button--color-brand"
    type="button"
  >
    ​
    Link Button
  </button>
   and shows that the link should adhere to its appearance
</p>
`;

exports[`<Button /> outline story renders snapshot 1`] = `
<button
  class="button button--variant-outline button--color-brand button--size-medium"
  type="button"
>
  ​
  Outline Button
</button>
`;
